# backend/src/main/java/ru/baikalsr/backend/Exchange/dto/NetworkInformationDTO.java
@@ -1,0 +1,6 @@
+package ru.baikalsr.backend.Exchange.dto;
+
+import ru.baikalsr.backend.Device.enums.NetworkTypes;
+
+public record NetworkInformationDTO(NetworkTypes typeNetwork, String wifiSsid) {
+}
